# cog_validator

./: Cargo.toml  README.md
src/: lib.rs  validator.rs  vsi.rs
src/data/: PuertoRicoTropicalFruit_cog.tif
