[package]
name = "cog_validator"
version = "0.1.1"
edition = "2021"
authors = ["ZhangWeixin <zwishingbjfu@gmail.com>"]
description = "A library for validating Cloud Optimized GeoTIFFs (COGs)"
keywords = ["gdal", "cog", "validator"]
license = "MIT"
repository = "https://github.com/zwishing/cog_validator"

[dependencies]
gdal-sys = "0.10.0"
gdal = "0.17.0"
anyhow = "1.0.83"
byteorder = "1.5.0"
libc = "0.2.153"
thiserror="1.0.57"
